--- a/shop/bin/src/main/resources/application.properties
+++ b/shop/bin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8083
+server.port=8084
 # JSP
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
-spring.datasource.password=hr
+spring.datasource.password=0207
 
 #spring.servlet.multipart.location=C:\\shopimg
 
