--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=0207
 mybatis.mapper-locations: static/mappers/*Mapper.xml
 
 
-server.servlet.encoding.charset=EUC-KR
+server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
