--- a/shop/src/main/resources/application.properties
+++ b/shop/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
-spring.datasource.password=0207
+spring.datasource.password=hr
 
 #spring.servlet.multipart.location=C:\\shopimg
 
